--- a/src/main/resources/templates/add-student.html
+++ b/src/main/resources/templates/add-student.html
@@ -134,11 +134,11 @@
                 <form th:action="@{/students}" th:object="${student}" method="post">
                     <div class="form-group">
                         <label>First Name</label>
-                        <input type="text" class="form-control" th:field="*{fName}" placeholder="First name" required>
+                        <input type="text" class="form-control" th:field="*{firstName}" placeholder="First name" required>
                     </div>
                     <div class="form-group">
                         <label>Last Name</label>
-                        <input type="text" class="form-control" th:field="*{lName}" placeholder="Last name" required>
+                        <input type="text" class="form-control" th:field="*{lastName}" placeholder="Last name" required>
                     </div>
                     <div class="form-group">
                         <label>Email address</label>
