--- a/src/main/resources/templates/update-student.html
+++ b/src/main/resources/templates/update-student.html
@@ -129,16 +129,16 @@
 <div class="container" style="padding-top: 20px">
     <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
-            <h1 class="text-center" style="padding-top: 10px">Update the Details Of <span th:text="${student.fName}"></span> </h1>
+            <h1 class="text-center" style="padding-top: 10px">Update the Details Of <span th:text="${student.firstName}"></span> </h1>
             <div class="card-body">
                 <form th:action="@{/students/{id} (id=${student.id})}" th:object="${student}" method="post">
                     <div class="form-group">
                         <label>First Name</label>
-                        <input type="text" class="form-control" th:field="*{fName}" placeholder="First name" >
+                        <input type="text" class="form-control" th:field="*{firstName}" placeholder="First name" >
                     </div>
                     <div class="form-group">
                         <label>Last Name</label>
-                        <input type="text" class="form-control" th:field="*{lName}" placeholder="Last name" >
+                        <input type="text" class="form-control" th:field="*{lastName}" placeholder="Last name" >
                     </div>
                     <div class="form-group">
                         <label>Email address</label>
